Increased height of .preview-date elements in the preview screen to be always 2rem. This ensures consistent spacing if the user does not specify an end date for a project or work experience.

--- a/src/index.css
+++ b/src/index.css
@@ -465,3 +465,7 @@ div > .description-style {
   width: 100%;
   text-align: justify;
 }
+
+.preview-date {
+  height: 2rem;
+}
